Updated final exam

--- a/essays/2016-09-22.md
+++ b/essays/2016-09-22.md
@@ -8,6 +8,8 @@ labels:
   - Coding Standards
 ---
 
-Starting off my career as a student in ICS, one thing that was emphasized above everything else was proper indentation and commenting. Back then, I thought it was a trivial thing that everyone did just because it was the norm, and that is still true to a certain extent today. But more importantly, I thought that was the only thing when it came to coding standards. This module changed that perception as I learned, mostly from the AirB&B guide, that coding standards is more than just proper formatting. It is also about smart coding. For example from the guide, the proper way to add something to an array is to use the push() function rather than calling the end of the array.
+Starting off my career as a student in ICS, one thing that was emphasized above everything else was proper indentation and commenting. Back then, I thought it was a trivial thing that everyone did just because it was the norm, and that is still true to a certain extent today. But more importantly, I thought that was the only thing when it came to coding standards. This module changed that perception as I learned, mostly from the AirB&B guide, that coding standards is more than just proper formatting. It is also about smart coding. For example, from the guide, the proper way to add something to an array is to use the push() function rather than calling the end of the array.
 
-Honestly, my first impressions with ESLint is...very neutral? I honestly did not notice any difference and I always got the green checkmark. In my experience, I have not seen anything out of the ordinary so I honestly do not know what ESLint does exactly. I am assuming it makes the typo squiggly lines under bad coding styles.
+This (kind of) blew my mind because it further defines the line between a computer scientist and a code monkey. Poorly written code is more vulnerable to exploits, obviously, but I always thought that as long as it did the job, it would meet the minimum requirements. Now, the minimum requirements for me is the absolute best I can do.
+
+Honestly, my first impressions with ESLint is...very neutral? I did not notice any difference in my coding and I always got the green check mark. In my experience, I have not seen anything out of the ordinary so I do not know what ESLint does exactly. I am assuming it makes the typo squiggly lines under bad coding styles or dumb coding.
