--- a/essays/2016-10-06.md
+++ b/essays/2016-10-06.md
@@ -9,10 +9,10 @@ labels:
   - Semantic UI
 ---
 
-It was a rough, hectic week for me. As I had prior knowledge of HTML and some experience working with UI Frameworks in general, I put ICS314 on the backburners but then forgot to take it off said backburners...That being said, aside from forgoing the at-home WODs, I still think I did decent at the WOD today. For some context, this week we learned about UI Frameworks, Semantic UI in particular, and how we could use them to make websites look good instead of something from an early 2000s MySpace page.
+It was a rough, hectic week for me. As I had prior knowledge of HTML and some experience working with UI Frameworks in general, I put ICS314 on the backburners, but I forgot to take it off. That being said, aside from forgoing the at-home WODs, I still think I did decent at the WOD today. For some context, this week we learned about UI Frameworks, Semantic UI in particular, and how we could use them to make websites look good instead of something from an early 2000s MySpace page.
 
-From a UI design standpoint, HTML and CSS are limited in what they can do. While they can be used to create a beautiful webpage, the coding behind it could take forever to type out; and even then the page might look good only on certain browsers, sizes, and/or devices. This is where UI Frameworks come in. UI Frameworks links the webpage to a CSS file and JavaScript files that allows users to quickly and easily build amazing webpages with minimal effort. Even though they can be stressful to learn, they make life a whole lot easier once you get the basics down.
+From a UI design standpoint, HTML and CSS are limited in what they can do. While they can be used to create a beautiful web page, the coding behind it could take forever to type out; and even then the page might look good only on certain browsers, sizes, and/or devices. This is where UI Frameworks come in. UI Frameworks links the web page to a CSS file and JavaScript files that allows users to quickly and easily build amazing web pages with minimal effort. Even though they can be stressful to learn, they make life a whole lot easier once you get the basics down. I know I sure hated them at first but now they are pretty okay to me. I have a small love-hate relationship with them but overall I like them.
 
-From a software engineer's point of view, UI frameworks reduce time needed to code something which allows the user to refocus their attention elsewhere or to nitpick and perfect the project. From a manager's point of view, it maximizes efficiency. Both reasons make UI frameworks like Semantic UI worth learning.
+Also, from a software engineer's point of view, UI frameworks reduce time needed to code something which allows the user to refocus their attention elsewhere or to nitpick and perfect the project. From a manager's point of view, it maximizes efficiency. Both reasons make UI frameworks like Semantic UI worth learning.
 
-Speaking of Semantic UI, it was fairly easy for me to learn as I already have some experience with it. Compared to the Twitter Bootstrap framework, it was a bit easier but I do have bias against it so I cannot fairly say. Though personally, I think I like the Twitter Bootstrap UI better right now.
+Speaking of Semantic UI, it was fairly easy for me to learn as I already have some experience with it. Compared to the Twitter Bootstrap framework, it was a bit easier but I do have bias against it so I cannot fairly say. Though personally, I think I like the Twitter Bootstrap UI better right now. However, everyone should learn both (and more!) to figure out what they really like. That is what I really like about computer science: there are so many alternatives to explore that anyone and everyone can find their niche. Not everyone can pull off a nice hat and a chic scarf, but that does not mean that no one can.
